test_programs/compile_failure/noirc_frontend_tests_cannot_determine_type_of_generic_argument_in_struct_constructor/src/main.nr

    struct Foo<T> {}

    fn main()
    {
        let _ = Foo {};
    }

    